[gd_scene load_steps=22 format=2]

[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Art/TilesetTest.png" type="Texture" id=2]
[ext_resource path="res://Audio/Shot.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/jetPack (2).wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/Jump.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/step2.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/gp.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/Hover1.wav" type="AudioStream" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.34544
height = 3.42104

[sub_resource type="Curve" id=4]
max_value = 1.97
_data = [ Vector2( 0, 0.555182 ), 0.0, 0.0, 0, 0, Vector2( 0.994253, 1.14618 ), -2.68636, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0.85098, 0.85098, 0.85098, 0.807843, 0.501961, 0.501961, 0.501961, 0.0588235 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 80, 112, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 88, 112, 8, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 80, 112, 8, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 96, 112, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 80, 120, 8, 8 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 7 ) ],
"loop": true,
"name": "Run",
"speed": 15.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0.0172414, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.00340903 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.543046 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=2]
max_value = 1.4
_data = [ Vector2( 0, 1.4 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.217045 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.0264901 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_mask = 11
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 9.555 )
collision_mask = 2

[node name="RunParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0.0488701, 7.71192 )
lifetime = 0.4
speed_scale = 2.5
explosiveness = 0.26
randomness = 0.4
local_coords = false
direction = Vector2( 5.129, -2.082 )
spread = 3.81
gravity = Vector2( 0, 21.158 )
initial_velocity = 52.27
angular_velocity = 10.0
damping = 55.9
damping_random = 0.37
angle = 108.8
angle_random = 0.74
scale_amount = 3.67
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2, 0 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
animation = "Idle"
playing = true

[node name="JumpParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 33
one_shot = true
speed_scale = 1.62
explosiveness = 1.0
randomness = 0.1
lifetime_randomness = 0.14
local_coords = false
emission_shape = 4
emission_points = PoolVector2Array( 3.133, 6.557, -2.553, 6.714 )
emission_normals = PoolVector2Array( 2, -0.44, -2, -0.488 )
emission_colors = PoolColorArray(  )
direction = Vector2( 0, 0 )
spread = 10.09
gravity = Vector2( 0, 9 )
initial_velocity = 42.38
initial_velocity_random = 0.1
angular_velocity = 186.17
angular_velocity_random = 0.1
damping = 100.0
damping_random = 0.27
angle_random = 0.19
scale_amount = 1.59
scale_amount_curve = SubResource( 12 )
color_ramp = SubResource( 13 )

[node name="Audiostreams" type="Node" parent="."]

[node name="ShootStream" type="AudioStreamPlayer" parent="Audiostreams"]
stream = ExtResource( 3 )

[node name="JetStream" type="AudioStreamPlayer" parent="Audiostreams"]
stream = ExtResource( 4 )

[node name="WalkStream" type="AudioStreamPlayer" parent="Audiostreams"]
stream = ExtResource( 6 )

[node name="JumpStream" type="AudioStreamPlayer" parent="Audiostreams"]
stream = ExtResource( 5 )

[node name="PoundStream" type="AudioStreamPlayer" parent="Audiostreams"]
stream = ExtResource( 7 )

[node name="HoverStream" type="AudioStreamPlayer" parent="Audiostreams"]
stream = ExtResource( 8 )

[node name="InvinceTimer" type="Timer" parent="."]
one_shot = true

[node name="JetpackVFX" type="Node2D" parent="."]

[node name="JetpackParticles" type="CPUParticles2D" parent="JetpackVFX"]
z_index = -10
emitting = false
amount = 28
lifetime = 0.5
speed_scale = 1.5
local_coords = false
emission_shape = 3
emission_points = PoolVector2Array( -4, 0, 4, 0 )
emission_colors = PoolColorArray(  )
direction = Vector2( 0, 1 )
spread = 2.0
gravity = Vector2( 0, 60 )
initial_velocity = 100.0
scale_amount = 1.7
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )
